--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             justify-content: space-between;
             align-items: center;
             height: 100vh;
+            width: 100vw;
+            overflow: hidden;
             background-color: #434343;
             color: white;
             font-family: Arial, sans-serif;
@@ -23,7 +25,7 @@
             position: relative;
         }
         .title {
-            margin-top: 160px;
+            margin-top: 150px;
             font-size: 36px;
             font-weight: bold;
         }
@@ -69,6 +71,7 @@
                 let newLeft = startLeft + (x - startX);
                 newLeft = Math.max(0, Math.min(newLeft, container.clientWidth - button.clientWidth));
                 button.style.left = `${newLeft}px`;
+                event.preventDefault(); // 터치 이동 시 스크롤 방지
             }
             
             function endDrag() {
