--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             display: flex;
             align-items: center;
             padding-left: 126px;
-            padding-top: -5px;
+            padding-bottom: 2px;
             font-size: 20px;
             z-index: 19;
             overflow: hidden;
@@ -163,7 +163,7 @@
             text-align: center;
             letter-spacing: -0.025em;
             font-size: 19px;
-            color: rgba(248, 248, 255, 0.5);
+            color: rgba(255, 255, 255, 0.6);
             z-index: 5;
             display: none;
         }
