--- a/glitch.html
+++ b/glitch.html
@@ -44,7 +44,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('./backB.png') no-repeat center center;
+            background: url('./backB_glitch.png') no-repeat center center;
             background-size: cover;
             z-index: 1;
         }
@@ -54,7 +54,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('./backA.png') no-repeat center center;
+            background: url('./backA_glitch.png') no-repeat center center;
             background-size: cover;
             opacity: 1;
             z-index: 10;
