--- a/0731 copy.html
+++ b/0731 copy.html
@@ -7,7 +7,7 @@
   <style>
     @font-face {
         font-family: "AkzidenzGrotesk";
-        src: url('./AkzidenzGroteskRegular.otf') format('opentype');
+        src: url('https://github.com/haanbink/kumiweb/blob/c2af26b96b2414da5339fe93c34903947475256b/AkzidenzGroteskRegular.otf') format('opentype');
         font-weight: normal;
         font-style: normal;
     }
@@ -349,4 +349,5 @@
   </script>
 
 </body>
+
 </html>
